# ptcn

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
ptcn/: components.py  constants.py  networks.py
tests/: test_components.py  test_networks.py  test_ptcn.py
