[tool.poetry]
name = "ptcn"
version = "0.1.1"
description = "TF2 implementation of a Temporal Convolutional Network with a probabilistic twist"
license = "GPL-3.0-only"
authors = ["UpstatePedro"]
readme = "README.md"
repository = "https://github.com/UpstatePedro/ptcn"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.2.0"
tensorflow-addons = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
